@@ -27,6 +27,10 @@
 	* usage.py, Magic.py: added %quickref
 	
 	* iplib.py: ESC_PAREN fixes: /f 1 2 -> f(1,2), not f(1 2).
+	
+	* GetoptErrors when invoking magics etc. with wrong args 
+	are now more helpful: 
+	GetoptError: option -l not recognized (allowed: "qb" )
 
 2006-01-25  Fernando Perez  <Fernando.Perez@colorado.edu>
 
